--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 	</div>
         <div class="welcome-text" >
 		
-            <h6>I Am Vikash Singh </h6>
-            <div class="element1">I'm Coder.</div>
+            <h6>I Am Anish Singh Chauhan </h6>
+            <div class="element1">I'm Practical thinker.</div>
             
             <a href="#" class="btn-style2 hire-btn">MAIL ME</a>
         </div>
@@ -99,9 +99,9 @@
                         <img src="images/my1.jpg" alt="" class="about-img img-responsive">
                            <div class="about-img-overlay">
                             <div class="social-icons">
-                                 <a href="https://www.facebook.com/itsmeKumaarGaurav"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://plus.google.com/u/0/113288126547589747889"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                                <a href="https://www.linkedin.com/in/kumaar-gaurav-40530a116/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                 <a href="https://www.facebook.com/9771685829"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://https://twitter.com/anishsinghchau3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                <a href="https://https://www.instagram.com/pave_ur_way_for_success/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
