--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12">
                     <div class="about-img">
-                        <img src="images/my1.jpg" alt="" class="about-img img-responsive">
+                        <img src="images/my.jpg.jpg" alt="" class="about-img img-responsive">
                            <div class="about-img-overlay">
                             <div class="social-icons">
                                  <a href="https://www.facebook.com/9771685829"><i class="fa fa-facebook" aria-hidden="true"></i></a>
