--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                            <div class="about-img-overlay">
                             <div class="social-icons">
                                  <a href="https://www.facebook.com/9771685829"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://https://twitter.com/anishsinghchau3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                <a href="https://https://www.instagram.com/pave_ur_way_for_success/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                <a href="https://twitter.com/anishsinghchau3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                <a href="https://www.instagram.com/pave_ur_way_for_success/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
