--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <img src="images/my.jpg.jpg" alt="" class="about-img img-responsive">
                            <div class="about-img-overlay">
                             <div class="social-icons">
-                                 <a href="https://www.facebook.com/9771685829"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                 <a href="https://www.facebook.com/anish singh chauhan"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://twitter.com/anishsinghchau3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 <a href="https://www.instagram.com/pave_ur_way_for_success/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                             </div>
