--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                  <a href="https://www.facebook.com/anish.singhchauhan.50"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://twitter.com/anishsinghchau3"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 <a href="https://www.instagram.com/pave_ur_way_for_success/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+				    <a href="https://plus.google.com/u/1/118098963384368424325"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
