--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <p>
                             
                         </p>
-                        <a href="https://drive.google.com/file/d/1pFQ3VkrsHAODbSj4XfOK9ti4kyXECSuJ/view" class="btn-style1">Download my CV</a>
+                        <a href="https://drive.google.com/file/d/1SHmPJv_xsj9ee7GlNSEqf83Qq4q_mC0P/view?usp=sharing" class="btn-style1">Download my CV</a>
                     </div>
                 </div>
             </div>
