--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             ABOUT ME
                         </h4>
                         <p>
-                            I am a fourth year undergraduate student at the Computer Science and Engineering Department of Indian Institute of Information Technology Guwahati. I am always looking to progress with my personal and professional development, inculcating new skills and broadening my horizons and acumen along the way. Pursuing my strong interest in Computer Science has over the years enabled me to develop keen analytical and reasoning skills.
+                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.<br>I am a big zero right now and wanna see myself beyond infinity!!!</br> 
                         </p>
                         <p>
                             
@@ -312,7 +312,7 @@ The portal has three sections - Admin Section,Doctor Section and Patient Section
                                     </div>
                                     <div class="contact-text">
                                         <p><span class="bold">Address</span></p>
-                                        <p>IIIT Guwahati,781001</p>
+                                        <p>AT WARD NO 02 VIP COLONY DALSINGHSARAI, SAMASTIPUR, BIHAR PIN:848114</p>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -321,7 +321,7 @@ The portal has three sections - Admin Section,Doctor Section and Patient Section
                                     </div>
                                     <div class="contact-text">
                                         
-                                        <p><span class="bold">Mobile</span></p><p> 8890134331/8209706630</p>
+                                        <p><span class="bold">Mobile</span></p><p> 9771685829/9065140500</p>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -330,7 +330,7 @@ The portal has three sections - Admin Section,Doctor Section and Patient Section
                                     </div>
                                     <div class="contact-text">
                                         <p><span class="bold">Email</span></p>
-                                        <p>vik625singh@gmail.com</p>
+                                        <p>email2akchauhan001@gmail.com</p>
                                     </div>
                                 </div>
                             </div>
