--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             ABOUT ME
                         </h4>
                         <p>
-                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.<br>I am a big zero right now and wanna see myself beyond infinity!!!</br> 
+                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.</p><p>I am a big zero right now and wanna see myself beyond infinity!!!
                         </p>
                         <p>
                             
