--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <div class="service-item animation" data-animation="pulse">
                              <span><i class="fa fa-mortar-board" aria-hidden="true"></i></span>
                             <p class="content-title">XII</p>
-                          <a href="www.stjosephspublicschool.org"><p class="content-text">St.Joseph,s Public School, MSV Nagar DalsinghSarai, Samastipur, Bihar</p></a>
+                          <a href="http://www.stjosephspublicschool.org"><p class="content-text">St.Joseph,s Public School, MSV Nagar DalsinghSarai, Samastipur, Bihar</p></a>
                             <p class="content-text">CBSE Board</p>
                             <p class="content-text">83.80%</p>
                         </div>
@@ -209,7 +209,7 @@
                         <div class="service-item animation" data-animation="fadeInRight">
                              <span><i class="fa fa-mortar-board" aria-hidden="true"></i></span>
                             <p class="content-title">X</p>
-                            <a href="www.stjosephspublicschool.org"><p class="content-text">St.Joseph,s Public School, MSV Nagar DalsinghSarai, Samastipur, Bihar</p></a>
+                            <a href="http://www.stjosephspublicschool.org"><p class="content-text">St.Joseph,s Public School, MSV Nagar DalsinghSarai, Samastipur, Bihar</p></a>
                             <p class="content-text">CBSE Board</p>
 			    <p class="content-text">CGPA: 10.0</p>
                         </div>
