--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <div class="service-item animation" data-animation="fadeInRight">
                              <span><i class="fa fa-mortar-board" aria-hidden="true"></i></span>
                             <p class="content-title">Primary Education</p>
-                            <a href="www.centralpublicschools.com"><p class="content-text">Central Public School,Delhi</p></a>
+                            <a href="http://www.centralpublicschools.com"><p class="content-text">Central Public School,Delhi</p></a>
                             <p class="content-text">CBSE Board</p>
 			    <p class="content-text">Above 95%</p>
                         </div>
