--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><a class="home" href="#welcome-area">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#academic">Academic</a></li>
-                            <li><a href="#project">Projects</a></li>
+                            <li><a href="#contribution">My Contributions</a></li>
                             
                             <li><a href="#contact">Contact</a></li>
                         </ul>
@@ -137,38 +137,39 @@
                             <div class="skill-heading-area">
                                 <h6>My Skills</h6>
                                 <h4>Be the best version of you</h4>
+				    <h4>Simplicity is the ultimate sophistication</h4>
                                 <p></p>
-                                <a href="#experience" class="btn-style2 skill-btn">SEE MY PROJECTS</a>
+                                <a href="#experience" class="btn-style2 skill-btn">SEE MY CONTRIBUTIONS</a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="progressbar-area">
-                                <p>C/C++</p>
+                                <p>GRAMMAR</p>
                                 <div class="progress">
                                     <div class="progress-bar prog-90" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:0%;">
 
                                         <span>90%</span>
                                     </div>
                                 </div>
-                                <p>JAVA</p>
+                                <p>POETRY</p>
                                 <div class="progress">
                                     <div class="progress-bar prog-80" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
 
                                         <span>80%</span>
                                     </div>
                                 </div>
-                                <p>MYSQL</p>
+                                <p>NOVELS</p>
                                 <div class="progress">
-                                    <div class="progress-bar prog-86" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                    <div class="progress-bar prog-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
 
-                                        <span>86%</span>
+                                        <span>75%</span>
                                     </div>
                                 </div>
-                                <p>MATLAB</p>
+                                <p>COMMUNICATION</p>
                                 <div class="progress">
-                                    <div class="progress-bar prog-80" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                    <div class="progress-bar prog-95" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
 
-                                        <span>80%</span>
+                                        <span>95%</span>
                                     </div>
                                 </div>
                             </div>
