--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="skill-heading-area">
                                 <h6>My Skills</h6>
                                 <h4>Be the best version of you</h4>
-				    <h4>Simplicity is the ultimate sophistication</h4>
+				    <p></p> <h4>Simplicity is the ultimate sophistication</h4>
                                 <p></p>
                                 <a href="#experience" class="btn-style2 skill-btn">SEE MY CONTRIBUTIONS</a>
                             </div>
