--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><a class="home" href="#welcome-area">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#academic">Academic</a></li>
-                            <li><a href="#contribution">My Contributions</a></li>
+                            <li><a href="#creation">Creation</a></li>
                             
                             <li><a href="#contact">Contact</a></li>
                         </ul>
@@ -160,16 +160,16 @@
                                 </div>
                                 <p>NOVELS</p>
                                 <div class="progress">
-                                    <div class="progress-bar prog-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                    <div class="progress-bar prog-80" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
 
-                                        <span>75%</span>
+                                        <span>80%</span>
                                     </div>
                                 </div>
                                 <p>COMMUNICATION</p>
                                 <div class="progress">
-                                    <div class="progress-bar prog-95" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                    <div class="progress-bar prog-90" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
 
-                                        <span>95%</span>
+                                        <span>90%</span>
                                     </div>
                                 </div>
                             </div>
