--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <!--Start Experience Section-->
     <section class="experience padding-style1" id="project">
         <div class="experience-header">
-            <h4 class="section-title">MY PROJECTS</h4>
+            <h4 class="section-title">MY CREATION</h4>
         </div>
         <div class="container">
             <div class="experience-container">
@@ -247,9 +247,9 @@
                         <div class="experience-item">
                             <div class="experience-circle"></div>
                             <div class="experience-content">
-                                <h6>3D VIDEO WATERMARKING</h6>
-                                <p class="range">Jan 2017-Present</p>
-                                <p>Ensure secure media transmission, efficient authentication schemes for 3D video sequence. Understand properties of robustness, tamper resistance, fidelity, and false positive rate. Propose a robust watermarking and authentication method for 3D video sequence. copyright protection and secure authentication is a necessary work for real and fake 3D video.</p>
+                                <h6>A BEAUTY WHICH IS LOVED YET</h6>
+                                <p class="range">Jan 2014</p>
+                  <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.<p>Please go through this.....</p> </p>
                             </div>
                         </div>
                     </div>
