--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                         <div class="experience-item">
                             <div class="experience-circle"></div>
                             <div class="experience-content">
-                                <h6>SURVEY OF  UNSUPERVISED LAND-COVER CLASSIFICATION TECHNIQUES</h6>
-                                <p class="range">Jan 2016 - Apr 2016</p>
-                                <p>Extensive survey of existing clustering techniques for remotely sensed images were conducted. Propose some UnSupervised classification algorithm for satellite images and finding best algorithm for classification by comparing these results of algorithms. Finding different characteristic of land using satellite images.</p>
+                                <h6>INTERVAL</h6>
+                                <p class="range">Feb 2015</p>
+                                <p>This </p>
                             </div>
                         </div>
                     </div>
