--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                                 <h6>INTERVAL</h6>
                                 <p class="range">Feb 2015</p>
                                 <p>This </p>
+				    <img src="uu.jpg" height=30% width=30% ><br/> <h1><em><marquee>My First Poem!!!!!!!</marquee></em></h1><br/>
+<p><h3>Below a link to the first poem!!!</h3></p><br/>
+<a href="first.html" title="GO TO FIRST POEM"><center> Click here to go to the first poem page...</center></a><br/>
                             </div>
                         </div>
                     </div>
