--- a/first.html
+++ b/first.html
@@ -3,8 +3,8 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(c.jpg);
-	background-repeat:no-repeat;
+	background-image: url(aaa.jpg);
+	background-repeat:repeat;
 font-weight:bold;
 font-style:italic;
 text-align:center;
