--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(aaa.jpg);
+	background-image: url(bbb.jpg);
 	background-repeat:repeat;
 font-weight:bold;
 font-style:italic;
