--- a/second.html
+++ b/second.html
@@ -3,8 +3,8 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(kk.jpg);
-	background-repeat:no-repeat;
+	background-image: url(bbb.jpg);
+	background-repeat:repeat;
 font-weight:bold;
 font-style:italic;
 text-align:center;
@@ -33,7 +33,7 @@ a{color:silver;font-family:bold}
                        <p> You just leave me like a scratch"</p><br/></strong><br/>
 					   <strong>A K CHAUHAN</strong>
 					   <p>--------------------**********-----------------------</p><br/><br/>
-					   <a href="first.html" title="BIHAR STATE TOPPER 2015"><center> Click here to go to the previous page...</center></a>
+					   <a href="index.html" title="GO TO MAIN PAGE"<center> Click here</center></a>
 
 					   </body>
 					   </html>
