--- a/first.html
+++ b/first.html
@@ -35,5 +35,7 @@ p{color:skyblue;font-family:arial}
                   <p>   I think,the fact is vanishing and charming,</p>
                        <p> The combination above mentioned is ultimate uncanning."</p></strong><br/>
 					   <strong>A K CHAUHAN</strong>
+	<p>--------------------**********-----------------------</p><br/><br/>
+					   <a href="index.html" title="GO TO MAIN PAGE"<center> Click here</center></a>
 					   </body>
 					   </html>
