--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                                 <h6>INTERVAL</h6>
                                 <p class="range">Feb 2015</p>
                                 <p>This poem is all about the existence of momentary love.</p>
-				    <img src="uu.jpg" align="center" height=50% width=50% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
-<p><h8>Below a link to the poem <strong>"INTERVAL"</strong></h8></p><br/>
+				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+<p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
                             </div>
                         </div>
@@ -273,8 +273,8 @@
                               <h6>MY HEART STILL BEATS FOR YOU</h6>
                                 <p class="range">Jan 2016</p>
                                 <p></p>
-				    <img src="uu.jpg" align="center" height=50% width=50% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
-<p><h8>Below a link to the poem <strong>"MY HEART STILL BEATS FOR YOU"</strong></h8></p><br/>
+				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+<p><h8>Click here to go through the poem <strong>"MY HEART STILL BEATS FOR YOU"</strong></h8></p><br/>
 <a href="second.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
                             </div>
                         </div>
