--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
                             ABOUT ME
                         </h4>
                         <p>
-                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.</p><p>I am a big zero right now and wanna see myself beyond infinity!!!
+                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.</p><p><strong>I am a big zero right now and wanna see myself beyond infinity!!!</strong>
                         </p>
+			    <p><h4 class="section-title">
+			    LIKES & DISLIKES
+			    </h4></p>
                         <p>
                             
                         </p>
