--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                             ABOUT ME
                         </h4>
                         <p>
-                         Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.</p><p><strong>I am a big zero right now and wanna see myself beyond infinity!!!</strong>
-                        </p>
+                        <i> Hey Buddy, This is Anish Singh Chauhan. Right now, I am preparing for SSC CGL and have been working as a faculty of English at CHANAKYA CAREER ACADEMY. My dream is to  crack UPSC and to save girls from bloody elements of society.</i></p><p><strong>I am a big zero right now and wanna see myself beyond infinity!!!</strong>
+                        </p><br></br>
 			    <p><h4 class="section-title">
-			    LIKES & DISLIKES
+			    <em>LIKES & DISLIKES</em>
 			    </h4></p>
                         <p>
                             
