--- a/index.html
+++ b/index.html
@@ -117,7 +117,22 @@
                         </p><br></br>
 			    <p><h4 class="section-title">
 			    <em>LIKES & DISLIKES</em>
-			    </h4></p>
+			    </h4></p><br></br>
+		<h6 class="section-title">
+			LIKES
+			</h6>
+		<ul>
+			<li><i>Aloofness.</i></li>
+			<li><i>Listening to soft instrumental music.</i></li>
+			<li><i>Nature.</i></li>
+			<li><i>To appreciate achievements/good qualities irrespective of any barrier.</i></li>
+			<li><i>To break outdated barriers of the society.</i></li>
+			<li><i>To walk with life partner .</i></li>
+			<li><i>To roam about the world.</i></li>
+			<li><i>Chocolates.</i></li>
+			<li><i>To wish someone very special before wishing anyone.</i></li>
+			<li><strong>And many more things.....</strong></li>
+			</ul>
                         <p>
                             
                         </p>
