--- a/index.html
+++ b/index.html
@@ -268,7 +268,10 @@
                                 <h6>A BEAUTY WHICH IS LOVED YET</h6>
                                 <p class="range">Jan 2014</p>
                   <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.<p>Please go through this.....</p> </p>
-                            </div>
+                           <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
+<p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
+<a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
+			    </div>
                         </div>
                     </div>
                     <div class="col-md-6 right-item experience-top-margin">
