--- a/p.html
+++ b/p.html
@@ -19,29 +19,30 @@ p{color:skyblue;font-family:arial}
 
 <h1>"***<u>A BEAUTY WHICH IS LOVED YET</u>***"</h1>
            <strong> <p> "How that spirit wandering,</p>
-                       <p>   Everyforenoon showing gestureness,</p><br/>
+                       <p>   Everyforenoon showing gestureness,</p>
                     <p> Pranced towards the arriving,</p>
-                       <p>   Nothing there but felt a familiarness,</p>
-                    <p> Perhaps come through whipping,</p>
+                       <p>   Nothing there but felt familiarness,</p>
+                    <p> Perhaps came through whipping,</p>
                        <p>   Made my heart pounding.</p><br/>
                     <p> Chasing it with chivalric certainty,</p>
                        <p>   Surrounding made me to feel solitary,</p>
-                    <p> No creatures,No sign of life,No commotion at all there,</p>
-                       <p>   I felt myself in too much glomyness,</p>
+                    <p> No creatures,No sign of life,No commotions at all there,</p>
+                       <p>   I felt myself in too much gloomyness,</p>
                     <p> Abruptly a sweet angel appeared with amber glow face,</p>
                        <p>   Made me to feel my heart blitheness.</p><br/>
                     <p> Still unaware of that spirit,</p>
                        <p>   I hesitated a bit,</p>
-                    <p> But her cuteness moved me for apart,</p>
+                    <p> But her cuteness moved me far apart,</p>
                        <p>   Leaving no questions in my heart.</p><br/>
 				    <p> Gazed at her face prolonged,</p>
                        <p>   Totally oblivious to the world around,</p>
 				    <p> It was nothing around except us,</p> 
-                       <p>   Under the same sky and on the same sites.</p><br/>	
+                       <p>   Under the same sky and at the same sites.</p><br/>	
                     <p> By the by soulmate departed from my sight,</p>
                        <p>   Showed me a gesture of love alright,</p>
                     <p> At the eleventh hour, I said,</p>
                        <p>   A beauty whose beautiness reflects from her sanctity."</p></strong><br/>
-					   <strong>A K CHAUHAN</strong>
+					   <strong><em>From the pen of</em> A K CHAUHAN</strong><br/>
+	
 					   </body>
 					   </html>
