--- a/p.html
+++ b/p.html
@@ -43,6 +43,8 @@ p{color:skyblue;font-family:arial}
                     <p> At the eleventh hour, I said,</p>
                        <p>   A beauty whose beautiness reflects from her sanctity."</p></strong><br/>
 					   <strong><em>From the pen of</em> A K CHAUHAN</strong><br/>
+	<p>--------------------**********-----------------------</p><br/><br/>
+					   <a href="index.html" title="GO TO MAIN PAGE"<center> Click here</center></a><br/>
 	
 					   </body>
 					   </html>
