--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
 			<li><i>To wish someone very special before wishing anyone.</i></li>
 			<li><strong>And many more things.....</strong></li>
 			</ul>
-                        <p>
-                            
-                        </p>
+		<h6 class="section-title">
+			DISLIKES
+			</h6>
+		<p><strong><em>The things that hurt me the most are the things that I dislike the most....</em></strong></p>
+                        <br/>
                         <a href="https://drive.google.com/file/d/1SHmPJv_xsj9ee7GlNSEqf83Qq4q_mC0P/view" class="btn-style1">Download my CV</a>
                     </div>
                 </div>
@@ -157,7 +159,7 @@
                                 <h4>Be the best version of you</h4>
 				    <p></p> <h4>Simplicity is the ultimate sophistication</h4>
                                 <p></p>
-                                <a href="#experience" class="btn-style2 skill-btn">SEE MY CONTRIBUTIONS</a>
+                                <a href="#creation" class="btn-style2 skill-btn">SEE MY CONTRIBUTIONS</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -267,7 +269,7 @@
                             <div class="experience-content">
                                 <h6>A BEAUTY WHICH IS LOVED YET</h6>
                                 <p class="range">Jan 2014</p>
-                  <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.<p>Please go through this.....</p> </p>
+                  <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.</p>
                            <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
 <a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
