--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <!---title logo icon-->
-    <link rel="shortcut icon" href="images/index.png" />
+    <link rel="shortcut icon" href="logo.jpg" />
     <script type="text/javascript" src="js/respond.js"></script>
 </head>
 
@@ -295,7 +295,7 @@
                             <div class="experience-content">
                               <h6>MY HEART STILL BEATS FOR YOU</h6>
                                 <p class="range">Jan 2016</p>
-                                <p></p>
+                                <br/>
 				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"MY HEART STILL BEATS FOR YOU"</strong></h8></p><br/>
 <a href="second.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
@@ -306,9 +306,11 @@
                         <div class="experience-item">
                             <div class="experience-circle"></div>
                             <div class="experience-content">
-                                <h6>FACULTY FEEDBACK SYSTEM</h6>
-                                <p class="range">Jan 2016 - Apr 2016</p>
-                                <p>Developed an online faculty feedback portal for use case like giving feedback and update information about courses and student through admin privileges.</p>
+                                <h6>SWEETHEART FOREVER</h6>
+				    <p class="range">Mar 2017</p><br/>
+				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+<p><h8>Click here to go through the poem <strong>"SWEETHEART FOREVER"</strong></h8></p><br/>
+<a href="q.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
                             </div>
                         </div>
                     </div>
