--- a/q.html
+++ b/q.html
@@ -34,14 +34,16 @@ p{color:skyblue;font-family:arial}
                        <p>   Inhaling the sweet smell of the sweet wind,</p>
                     <p> Abruptly, It fade away,</p>
                        <p>   Leaving an environment of silence,silence,silence,</p>
-				    <p> Made me to suffer a lot from gloomyness.</p><br/>
-					   <p>   Right that moment come for an instant,</p>
-				    <p> Eagerness around in my heart to persuade,</p> 
+		    <p> Made me to suffer a lot from gloomyness.</p><br/>
+		       <p>   Right that moment come for an instant,</p>
+		    <p> Eagerness around in my heart to persuade,</p> 
                        <p>   At last reached the destination,</p>
                     <p> A beautiful house painted white,</p>
                        <p>   It was nothing but, breath of my sweetheart,</p>
                     <p> Which is forever, forever & forever."</p>
                        </strong><br/>
-					   <strong><h4><em>From the pen of <i>A K CHAUHAN</i></em></h4></strong>
+			<strong><h4><em>From the pen of <i>A K CHAUHAN</i></em></h4></strong>
+	       <p>--------------------**********-----------------------</p><br/>
+		 <a href="index.html" title="GO TO MAIN PAGE"<center> Click here</center></a>
 					   </body>
 					   </html>
