--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <a href="index.html" class="logo">
-                        <img src="images/index.png" alt="logo" width=80  height=60>
+                        <img src="logo.jpg" alt="logo" width=80  height=60>
                     </a>
                 </div>
                 <div class="col-md-9">
