--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <a href="index.html" class="logo">
+                    <a href="index.html" class="log">
                         <img src="log.jpg" alt="logo" width=80  height=60>
                     </a>
                 </div>
