--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="RezuMate is a personal portfolio HTML template with clean and elegant design">
     <meta name="keywords" content="bootstrap,clean,cv,minimal,onepage particle,personal,portfolio,resume,vcard ">
-    <title>Anish</title>
+    <title>Anish Singh Chauhan</title>
     <!--css styles-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <!---title logo icon-->
+    <!---title log icon-->
     <link rel="shortcut icon" href="log.jpg" />
     <script type="text/javascript" src="js/respond.js"></script>
 </head>
