--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <!---title log icon-->
-    <link rel="shortcut icon" href="log.jpg" />
+    <!---title logo icon-->
+    <link rel="shortcut icon" href="logo.jpg" />
     <script type="text/javascript" src="js/respond.js"></script>
 </head>
 
