--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <!---title logo icon-->
-    <link rel="shortcut icon" href="logo.jpg" />
+    <link rel="shortcut icon" href="logo.jpg" class="logo" />
     <script type="text/javascript" src="js/respond.js"></script>
 </head>
 
