--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <!---title logo icon-->
-    <link rel="shortcut icon" href="logo.jpg" class="logo" />
+    <link rel="shortcut icon" href="index.png.jpg" />
     <script type="text/javascript" src="js/respond.js"></script>
 </head>
 
@@ -47,8 +47,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <a href="index.html" class="log">
-                        <img src="log.jpg" alt="logo" width=80  height=60>
+                    <a href="index.html" class="logo">
+                        <img src="index.png.jpg" alt="logo" width=80  height=60>
                     </a>
                 </div>
                 <div class="col-md-9">
