--- a/q.html
+++ b/q.html
@@ -3,7 +3,7 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(c.jpg);
+	background-image: url(a.jpg);
 	background-repeat:no-repeat;
 font-weight:bold;
 font-style:italic;
