--- a/second.html
+++ b/second.html
@@ -3,8 +3,8 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(bbb.jpg);
-	background-repeat:repeat;
+	background-image: url(h.jpg);
+	background-repeat:no-repeat;
 font-weight:bold;
 font-style:italic;
 text-align:center;
