--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
 <style type="text/css">
 body{
 	background-image: url(b.jpg);
-	background-repeat: repeat-x;
+	background-repeat: repeat;
 	background-size: cover;
 font-weight:bold;
 font-style:italic;
