--- a/first.html
+++ b/first.html
@@ -12,8 +12,8 @@ text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:gold;}
-p{color:skyblue;font-family:arial}
+color:DodgerBlue;}
+p{color:violet;font-family:arial}
 </style>
 </head>
 <body>
