--- a/first.html
+++ b/first.html
@@ -13,7 +13,7 @@ text-indent:20px;
 	}
 	h1{
 color:DodgerBlue;}
-p{color:violet;font-family:arial}
+p{color:SlateBlue;font-family:arial}
 </style>
 </head>
 <body>
