--- a/first.html
+++ b/first.html
@@ -18,7 +18,7 @@ p{color:SlateBlue;font-family:arial}
 </head>
 <body>
 
-<h1 style="color:DodgerBlue;>""***<u>INTERVAL</u>***"</h1>
+<h1>"***<u>INTERVAL</u>***"</h1>
                   <strong> <p> "My love stops at the surface,I cannot brim upto,</p>
                      <p>   However this is worthless,but a step to step upto,</p><br/>
                     <p> Cheers shouts pop,all creates a vibration,</p>
