--- a/p.html
+++ b/p.html
@@ -3,8 +3,9 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(c.jpg);
-	background-repeat:no-repeat;
+	background-image: url(h.jpg);
+	background-repeat:repeat;
+	background-size: cover;
 font-weight:bold;
 font-style:italic;
 text-align:center;
