--- a/p.html
+++ b/p.html
@@ -12,8 +12,8 @@ text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:violet;}
-p{color:SlateBlue;font-family:arial}
+color:SlateBlue;}
+p{color:violet;font-family:arial}
 </style>
 </head>
 <body>
