--- a/p.html
+++ b/p.html
@@ -13,7 +13,7 @@ text-indent:20px;
 	}
 	h1{
 color:SlateBlue;}
-p{color:violet;font-family:arial}
+p{color:lime;font-family:arial}
 </style>
 </head>
 <body>
