--- a/p.html
+++ b/p.html
@@ -12,7 +12,7 @@ text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:SlateBlue;}
+color:violet;}
 p{color:#14DA47;font-family:arial}
 </style>
 </head>
