--- a/q.html
+++ b/q.html
@@ -4,15 +4,16 @@
 <style type="text/css">
 body{
 	background-image: url(a.jpg);
-	background-repeat:no-repeat;
+	background-repeat:repeat;
+	background-size: cover;
 font-weight:bold;
 font-style:italic;
 text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:gold;}
-p{color:skyblue;font-family:arial}
+color:#808000;}
+p{color:#00FFFF;font-family:arial}
 </style>
 </head>
 <body>
