--- a/q.html
+++ b/q.html
@@ -13,7 +13,7 @@ text-indent:20px;
 	}
 	h1{
 color:#808000;}
-p{color:#00FFFF;font-family:arial}
+p{color:#FF00FF;font-family:arial}
 </style>
 </head>
 <body>
