--- a/q.html
+++ b/q.html
@@ -38,10 +38,10 @@ p{color:#FF00FF;font-family:arial}
 		    <p> Made me to suffer a lot from gloomyness.</p><br/>
 		       <p>   Right that moment come for an instant,</p>
 		    <p> Eagerness around in my heart to persuade,</p> 
-                       <p>   At last reached the destination,</p>
+                       <p>  <em> At last reached the destination,</p>
                     <p> A beautiful house painted white,</p>
                        <p>   It was nothing but, breath of my sweetheart,</p>
-                    <p> Which is forever, forever & forever."</p>
+                    <p> Which is forever, forever & forever."</em></p>
                        </strong><br/>
 			<strong><h4><em>From the pen of <i>A K CHAUHAN</i></em></h4></strong>
 	       <p>--------------------**********-----------------------</p><br/>
