--- a/second.html
+++ b/second.html
@@ -3,16 +3,17 @@
 <head>
 <style type="text/css">
 body{
-	background-image: url(h.jpg);
-	background-repeat:no-repeat;
+	background-image: url(f.jpg);
+	background-repeat:repeat;
+	background-size: cover;
 font-weight:bold;
 font-style:italic;
 text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:gold;}
-p{color:pink;font-family:arial}
+color:#92DA14;}
+p{color:#00FFFF;font-family:arial}
 a{color:silver;font-family:bold}
 </style>
 </head>
