--- a/second.html
+++ b/second.html
@@ -12,7 +12,7 @@ text-align:center;
 text-indent:20px;
 	}
 	h1{
-color:#92DA14;}
+color:#1492DA;}
 p{color:#00FFFF;font-family:arial}
 a{color:silver;font-family:bold}
 </style>
