--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <h6>A BEAUTY WHICH IS LOVED YET</h6>
                                 <p class="range">Jan 2014</p>
                   <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.</p>
-                           <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
+                           <img src="i.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
 <a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
 			    </div>
@@ -283,7 +283,7 @@
                                 <h6>INTERVAL</h6>
                                 <p class="range">Feb 2015</p>
                                 <p>This poem is all about the existence of momentary love.</p>
-				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+				    <img src="k.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"INTERVAL"</strong></h8></p><br/>
 <a href="first.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
                             </div>
@@ -308,7 +308,7 @@
                             <div class="experience-content">
                                 <h6>SWEETHEART FOREVER</h6>
 				    <p class="range">Mar 2017</p><br/>
-				    <img src="uu.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
+				    <img src="j.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My another creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"SWEETHEART FOREVER"</strong></h8></p><br/>
 <a href="q.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
                             </div>
