--- a/q.html
+++ b/q.html
@@ -13,7 +13,7 @@ text-indent:20px;
 	}
 	h1{
 color:#808000;}
-p{color:#FF00FF;font-family:arial}
+p{color:#04F999;font-family:arial}
 </style>
 </head>
 <body>
@@ -36,8 +36,8 @@ p{color:#FF00FF;font-family:arial}
                     <p> Abruptly, It fade away,</p>
                        <p>   Leaving an environment of silence,silence,silence,</p>
 		    <p> Made me to suffer a lot from gloomyness.</p><br/>
-		       <p>   Right that moment come for an instant,</p>
-		    <p> Eagerness around in my heart to persuade,</p> 
+		       <p>   Right that moment came for an instant,</p>
+		    <p> Eagerness aroused in my heart to persuade,</p> 
                        <p>  <em> At last reached the destination,</p>
                     <p> A beautiful house painted white,</p>
                        <p>   It was nothing but, breath of my sweetheart,</p>
