--- a/q.html
+++ b/q.html
@@ -13,7 +13,7 @@ text-indent:20px;
 	}
 	h1{
 color:#808000;}
-p{color:#04F999;font-family:arial}
+p{color:#17202A;font-family:arial}
 </style>
 </head>
 <body>
@@ -43,7 +43,7 @@ p{color:#04F999;font-family:arial}
                        <p>   It was nothing but, breath of my sweetheart,</p>
                     <p> Which is forever, forever & forever."</em></p>
                        </strong><br/>
-			<strong><h4><em>From the pen of <i>A K CHAUHAN</i></em></h4></strong>
+			<strong><h4 style="color:#4A235A"><em>From the pen of <i>A K CHAUHAN</i></em></h4></strong>
 	       <p>--------------------**********-----------------------</p><br/>
 		 <a href="index.html" title="GO TO MAIN PAGE"<center> Click here</center></a>
 					   </body>
