--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
                                         <i class="fa fa-phone" aria-hidden="true"></i>
                                     </div>
                                     <div class="contact-text">
+					    <a href="https://api.whatsapp.com/send?phone=+919132400908&text=Hi, I contacted you Through your website." class="social-icon whatsapp"></a>
                                         
                                         <p><span class="bold">Mobile</span></p><p> 9771685829/9065140500</p>
                                     </div>
