--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="col-md-6">
 		<a href="https://api.whatsapp.com/send?phone=+919132400908&text=Hi, I contacted you Through your website.">
 			<font color="#25d366">Click here to whatsapp me </font> == $0
-			<img src="whatsapp.gif" alt="anishsingh" width="30" height="30"></a>
+			<img src="whatsapp.png" alt="anishsingh" width="30" height="30"></a>
 			</div>
                 <div class="col-md-9">
                     <nav class="menu single-page-nav" id="menu">
