--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
                     <a href="index.html" class="logo">
                         <img src="index.png.jpg" alt="logo" width=80  height=60>
                     </a>
-			<div class="col-md-6">
-		<a href="https://api.whatsapp.com/send?phone=+919132400908&text=Hi, I contacted you Through your website.">
-			<font color="#25d366">Click here to whatsapp me </font> == $0
-			<img src="whatsapp.png" alt="anishsingh" width="30" height="30"></a>
-			</div>
+			
                 <div class="col-md-9">
                     <nav class="menu single-page-nav" id="menu">
                         <ul>
@@ -90,6 +86,8 @@
             <div class="element1">I'm a thinker.</div>
             
             <a href="#" class="btn-style2 hire-btn">MAIL ME</a>
+		<a href="https://api.whatsapp.com/send?phone=+919132400908&text=Hi, I contacted you Through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
+			
         </div>
     </section>
     <!--End Welcome Section-->
