--- a/index.html
+++ b/index.html
@@ -50,21 +50,20 @@
                     <a href="index.html" class="logo">
                         <img src="index.png.jpg" alt="logo" width=80  height=60>
                     </a>
-			
-                <div class="col-md-9">
+			<div class="col-md-9">
                     <nav class="menu single-page-nav" id="menu">
                         <ul>
                             <li><a class="home" href="#welcome-area">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#academic">Academic</a></li>
                             <li><a href="#creation">Creation</a></li>
-                            
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
+	</div>
     </header>
     <!--End Header-->
 
