--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <a href="index.html" class="logo">
                         <img src="index.png.jpg" alt="logo" width=80  height=60>
                     </a>
+			</div>
 			<div class="col-md-9">
                     <nav class="menu single-page-nav" id="menu">
                         <ul>
