--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <div class="element1">I'm a thinker.</div>
             
             <a href="#" class="btn-style2 hire-btn">MAIL ME</a>
-		
+		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hi, I contacted you Through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
+			
         </div>
     </section>
     <!--End Welcome Section-->
