--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="element1">I'm a thinker.</div>
             
             <a href="#" class="btn-style2 hire-btn">MAIL ME</a>
-		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hi, I contacted you Through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
+		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hey, I have contacted you through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
 			
         </div>
     </section>
@@ -270,7 +270,7 @@
                             <div class="experience-content">
                                 <h6>A BEAUTY WHICH IS LOVED YET</h6>
                                 <p class="range">Jan 2014</p>
-                  <p>The journey of my life begins with the sweetest memory. In the memory of my swwetheart i have tried to compose this poem.</p>
+                  <p>The journey of my life begins with the sweetest memory. In the memory of my sweetheart I have tried to compose this poem.</p>
                            <img src="i.jpg" align="center" height=60% width=60% ><br/> <h6><em><marquee>My first creation!!!!!!!</marquee></em></h6><br/>
 <p><h8>Click here to go through the poem <strong>"A BEAUTY WHICH IS LOVED YET"</strong></h8></p><br/>
 <a href="p.html" title="GO TO POEM PAGE"><center> Click here.</center></a><br/>
