--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
             <a href="#" class="btn-style2 hire-btn">MAIL ME</a>
 		<a href="https://api.whatsapp.com/send?phone=+919570946409&text=Hey, I have contacted you through your website." class="btn-style2 hire-btn">WHATSAPP ME</a>
-			
+		<a href="tel:9771685829" class="btn-style2 hire-btn">CALL ME</a>	
         </div>
     </section>
     <!--End Welcome Section-->
