--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!---title logo icon-->
     <link rel="shortcut icon" href="index.png.jpg" />
     <script type="text/javascript" src="js/respond.js"></script>
+	<script src="//platform-api.sharethis.com/js/sharethis.js#property=5b2cff56eefdfa0011e900da&product=inline-share-buttons"></script>
 </head>
 
 <body>
@@ -106,6 +107,7 @@
                         </div>
                     </div>
                 </div>
+		    <div class="sharethis-inline-share-buttons"></div>
                 <div class="col-md-7">
                     <div class="about-text">
                         <h4 class="section-title">
